finished service section

--- a/home-nima.html
+++ b/home-nima.html
@@ -60,12 +60,102 @@
 									Premium Web Design, Development, and SEO
 									services to help your business stand out.
 								</p>
-								<a href="#" class="slide-down loga-transition">
+								<a
+									href="#"
+									class="loga-links slide-down loga-transition"
+								>
 									<span>MY SERVICES</span>
 									<i
 										class="fa-light fa-arrow-down loga-transition"
 									></i>
 								</a>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="services sec-padding">
+					<div class="container-fluid">
+						<div class="services-wrapper">
+							<div class="service-card">
+								<div class="service-content">
+									<span class="number">03</span>
+									<div class="service-title">
+										<h2>Content & Seo</h2>
+									</div>
+									<div class="service-description">
+										<p>
+											Proven SEO strategies that enhance
+											your online performance, bringing
+											you to the forefront of organic
+											search results.
+										</p>
+									</div>
+								</div>
+								<div class="service-link">
+									<a
+										href="#"
+										class="loga-links service-btn loga-transition"
+									>
+										<span>About SEO</span>
+										<i
+											class="fa-light fa-arrow-right loga-transition"
+										></i>
+									</a>
+								</div>
+							</div>
+							<div class="service-card">
+								<div class="service-content">
+									<span class="number">02</span>
+									<div class="service-title">
+										<h2>Development</h2>
+									</div>
+									<div class="service-description">
+										<p>
+											Get custom web development solutions
+											that are tailored to your
+											specifications, designed to deliver
+											a flawless user experience.
+										</p>
+									</div>
+								</div>
+								<div class="service-link">
+									<a
+										href="#"
+										class="loga-links service-btn loga-transition"
+									>
+										<span>About Development</span>
+										<i
+											class="fa-light fa-arrow-right loga-transition"
+										></i>
+									</a>
+								</div>
+							</div>
+							<div class="service-card">
+								<div class="service-content">
+									<span class="number">01</span>
+									<div class="service-title">
+										<h2>Web design</h2>
+									</div>
+									<div class="service-description">
+										<p>
+											Visually stunning web designs that
+											captivate your audience by blending
+											your brand voice and customer needs.
+										</p>
+									</div>
+								</div>
+								<div class="service-link">
+									<a
+										href="#"
+										class="loga-links service-btn loga-transition"
+									>
+										<span>About Web Design</span>
+										<i
+											class="fa-light fa-arrow-right loga-transition"
+										></i>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
