--- a/home-nima.html
+++ b/home-nima.html
@@ -74,10 +74,10 @@
 					</div>
 				</section>
 
-				<section class="services sec-padding">
+				<section class="services">
 					<div class="container-fluid">
 						<div class="services-wrapper">
-							<div class="service-card">
+							<div class="service-card loga-card">
 								<div class="service-content">
 									<span class="number">03</span>
 									<div class="service-title">
@@ -95,7 +95,7 @@
 								<div class="service-link">
 									<a
 										href="#"
-										class="loga-links service-btn loga-transition"
+										class="loga-links loga-hyper-link-btn loga-transition"
 									>
 										<span>About SEO</span>
 										<i
@@ -104,7 +104,7 @@
 									</a>
 								</div>
 							</div>
-							<div class="service-card">
+							<div class="service-card loga-card">
 								<div class="service-content">
 									<span class="number">02</span>
 									<div class="service-title">
@@ -122,7 +122,7 @@
 								<div class="service-link">
 									<a
 										href="#"
-										class="loga-links service-btn loga-transition"
+										class="loga-links loga-hyper-link-btn loga-transition"
 									>
 										<span>About Development</span>
 										<i
@@ -131,7 +131,7 @@
 									</a>
 								</div>
 							</div>
-							<div class="service-card">
+							<div class="service-card loga-card">
 								<div class="service-content">
 									<span class="number">01</span>
 									<div class="service-title">
@@ -148,12 +148,117 @@
 								<div class="service-link">
 									<a
 										href="#"
-										class="loga-links service-btn loga-transition"
+										class="loga-links loga-hyper-link-btn loga-transition"
 									>
 										<span>About Web Design</span>
 										<i
 											class="fa-light fa-arrow-right loga-transition"
 										></i>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="portfolio">
+					<div class="container-fluid">
+						<div class="portfolio-wrapper">
+							<div class="portfolio-wrapper-header">
+								<a
+									href="#"
+									class="loga-links loga-hyper-link-btn loga-transition"
+								>
+									<span>SEE ALL</span>
+									<i
+										class="fa-light fa-arrow-right loga-transition"
+									></i>
+								</a>
+								<h1>Portfolio</h1>
+							</div>
+							<div class="portfolio-content-wrapper">
+								<div class="loga-card portfolio-card">
+									<a href="#" class="loga-bg">
+										<div class="portfolio-card-content">
+											<div class="wrapper">
+												<div class="category">
+													<p>WEB DESIGN</p>
+												</div>
+												<div class="title">
+													<h3>Space</h3>
+												</div>
+											</div>
+										</div>
+										<span
+											class="loga-links loga-hyper-link-btn loga-transition"
+										>
+											<i
+												class="fa-light fa-arrow-right loga-transition"
+											></i>
+										</span>
+									</a>
+								</div>
+								<div class="loga-card portfolio-card">
+									<a href="#" class="loga-bg">
+										<div class="portfolio-card-content">
+											<div class="wrapper">
+												<div class="category">
+													<p>WEB DESIGN</p>
+												</div>
+												<div class="title">
+													<h3>Space</h3>
+												</div>
+											</div>
+										</div>
+										<span
+											class="loga-links loga-hyper-link-btn loga-transition"
+										>
+											<i
+												class="fa-light fa-arrow-right loga-transition"
+											></i>
+										</span>
+									</a>
+								</div>
+								<div class="loga-card portfolio-card">
+									<a href="#" class="loga-bg">
+										<div class="portfolio-card-content">
+											<div class="wrapper">
+												<div class="category">
+													<p>WEB DESIGN</p>
+												</div>
+												<div class="title">
+													<h3>Space</h3>
+												</div>
+											</div>
+										</div>
+										<span
+											class="loga-links loga-hyper-link-btn loga-transition"
+										>
+											<i
+												class="fa-light fa-arrow-right loga-transition"
+											></i>
+										</span>
+									</a>
+								</div>
+								<div class="loga-card portfolio-card">
+									<a href="#" class="loga-bg">
+										<div class="portfolio-card-content">
+											<div class="wrapper">
+												<div class="category">
+													<p>WEB DESIGN</p>
+												</div>
+												<div class="title">
+													<h3>Space</h3>
+												</div>
+											</div>
+										</div>
+										<span
+											class="loga-links loga-hyper-link-btn loga-transition"
+										>
+											<i
+												class="fa-light fa-arrow-right loga-transition"
+											></i>
+										</span>
 									</a>
 								</div>
 							</div>
