finished timeline section and finished FAQ section

--- a/home-nima.html
+++ b/home-nima.html
@@ -265,6 +265,413 @@
 						</div>
 					</div>
 				</section>
+
+				<section class="process">
+					<div class="container-fluid">
+						<div class="process-wrapper">
+							<div class="process-header">
+								<div class="subtitle">
+									<p>THE PROCESS</p>
+								</div>
+								<div class="title">
+									<h1>
+										Your Website
+										<br />
+										in 5 steps
+									</h1>
+								</div>
+								<div class="description">
+									<p>
+										Our process ensures that we create a
+										website tailored to your business needs.
+									</p>
+								</div>
+							</div>
+							<div class="process-timeline">
+								<ul class="timeline">
+									<div class="tl-circ top-circ">
+										<span>
+											<i
+												class="fa-light fa-arrow-down"
+											></i>
+										</span>
+									</div>
+									<li class="timeline-inverted">
+										<div class="tl-circ">
+											<span>01</span>
+										</div>
+										<div class="timeline-panel loga-card">
+											<div class="wrapper">
+												<div class="subtitle">
+													Do we Match?
+												</div>
+												<div class="title">
+													Discovery Call
+												</div>
+												<p>
+													Before we start, we
+													determine if and how I can
+													help you. What are your
+													requirements for your new
+													website? Why do you need a
+													new website? What goals do
+													you have, and what problems
+													can we solve with a new
+													website?
+												</p>
+												<p>
+													We get to know each other
+													better
+												</p>
+												<p>
+													Determine how I can best
+													assist you
+												</p>
+												<p>
+													Understand the goals you
+													have for your website
+												</p>
+											</div>
+										</div>
+									</li>
+
+									<li class="timeline">
+										<div class="tl-circ">
+											<span>02</span>
+										</div>
+										<div class="timeline-panel loga-card">
+											<p>
+												Lorem ipsum dolor sit amet,
+												consectetur adipisicing elit.
+												Porro odio, velit doloribus
+												cupiditate, illo, voluptatum aut
+												itaque optio eligendi sit, at
+												distinctio cumque doloremque
+												harum fugiat. At, blanditiis,
+												aperiam! Dolorem.
+											</p>
+										</div>
+									</li>
+									<li class="timeline-inverted">
+										<div class="tl-circ">
+											<span>03</span>
+										</div>
+										<div class="timeline-panel loga-card">
+											<div class="wrapper">
+												<div class="subtitle">
+													Do we Match?
+												</div>
+												<div class="title">
+													Discovery Call
+												</div>
+												<p>
+													Before we start, we
+													determine if and how I can
+													help you. What are your
+													requirements for your new
+													website? Why do you need a
+													new website? What goals do
+													you have, and what problems
+													can we solve with a new
+													website?
+												</p>
+												<p>
+													We get to know each other
+													better
+												</p>
+												<p>
+													Determine how I can best
+													assist you
+												</p>
+												<p>
+													Understand the goals you
+													have for your website
+												</p>
+											</div>
+										</div>
+									</li>
+
+									<li class="timeline">
+										<div class="tl-circ">
+											<span>04</span>
+										</div>
+										<div class="timeline-panel loga-card">
+											<p>
+												Lorem ipsum dolor sit amet,
+												consectetur adipisicing elit.
+												Porro odio, velit doloribus
+												cupiditate, illo, voluptatum aut
+												itaque optio eligendi sit, at
+												distinctio cumque doloremque
+												harum fugiat. At, blanditiis,
+												aperiam! Dolorem.
+											</p>
+										</div>
+									</li>
+									<li class="timeline-inverted">
+										<div class="tl-circ">
+											<span>05</span>
+										</div>
+										<div class="timeline-panel loga-card">
+											<div class="wrapper">
+												<div class="subtitle">
+													Do we Match?
+												</div>
+												<div class="title">
+													Discovery Call
+												</div>
+												<p>
+													Before we start, we
+													determine if and how I can
+													help you. What are your
+													requirements for your new
+													website? Why do you need a
+													new website? What goals do
+													you have, and what problems
+													can we solve with a new
+													website?
+												</p>
+												<p>
+													We get to know each other
+													better
+												</p>
+												<p>
+													Determine how I can best
+													assist you
+												</p>
+												<p>
+													Understand the goals you
+													have for your website
+												</p>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="faq">
+					<div class="container">
+						<div class="container-fluid">
+							<div class="faq-wrapper">
+								<div class="faq-accordion-wrapper">
+									<div
+										class="logato-accordion"
+										id="logato_faq"
+									>
+										<div class="accordion-item loga-card">
+											<h2
+												class="accordion-header"
+												id="headingOne"
+											>
+												<a
+													class="accordion-button"
+													type="button"
+													data-bs-toggle="collapse"
+													data-bs-target="#collapseOne"
+													aria-expanded="true"
+													aria-controls="collapseOne"
+												>
+													<span>
+														زمان معمول برای یک پروژه
+														وب سایت چقدر است؟
+													</span>
+
+													<div class="accordion-icon">
+														<i
+															class="fa-solid fa-plus-large"
+														></i>
+													</div>
+												</a>
+											</h2>
+											<div
+												id="collapseOne"
+												class="accordion-collapse collapse show"
+												aria-labelledby="headingOne"
+												data-bs-parent="#accordionExample"
+											>
+												<div class="accordion-body">
+													<p>
+														جدول زمانی پروژه وب سایت
+														بسته به پیچیدگی پروژه و
+														نیازهای خاص مشتری می
+														تواند متفاوت باشد. با
+														این حال، ما از نزدیک با
+														مشتریان خود کار می کنیم
+														تا یک جدول زمانی ایجاد
+														کنیم که برای همه مفید
+														باشد و تلاش می کنیم
+														پروژه ها را به موقع و
+														کارآمد ارائه دهیم.
+													</p>
+												</div>
+											</div>
+										</div>
+										<div class="accordion-item loga-card">
+											<h2
+												class="accordion-header"
+												id="headingTwo"
+											>
+												<button
+													class="accordion-button collapsed"
+													type="button"
+													data-bs-toggle="collapse"
+													data-bs-target="#collapseTwo"
+													aria-expanded="false"
+													aria-controls="collapseTwo"
+												>
+													<span
+														>آیا می توانید در تعمیر
+														و نگهداری وب سایت و به
+														روز رسانی پس از اتمام
+														پروژه کمک کنید؟</span
+													>
+
+													<div class="accordion-icon">
+														<i
+															class="fa-solid fa-plus-large"
+														></i>
+													</div>
+												</button>
+											</h2>
+											<div
+												id="collapseTwo"
+												class="accordion-collapse collapse"
+												aria-labelledby="headingTwo"
+												data-bs-parent="#accordionExample"
+											>
+												<div class="accordion-body">
+													<p>
+														بله، ما خدمات پشتیبانی و
+														نگهداری مداوم وب سایت را
+														برای مشتریان خود ارائه
+														می دهیم. چه نیاز به
+														به‌روزرسانی محتوا، رفع
+														مشکلات یا افزودن
+														ویژگی‌های جدید داشته
+														باشید، ما اینجا هستیم تا
+														به شما کمک کنیم.
+													</p>
+												</div>
+											</div>
+										</div>
+										<div class="accordion-item loga-card">
+											<h2
+												class="accordion-header"
+												id="headingThree"
+											>
+												<button
+													class="accordion-button collapsed"
+													type="button"
+													data-bs-toggle="collapse"
+													data-bs-target="#collapseThree"
+													aria-expanded="false"
+													aria-controls="collapseThree"
+												>
+													<span
+														>چگونه مطمئن می شوید که
+														وب سایت من برای موتورهای
+														جستجو بهینه شده
+														است؟</span
+													>
+
+													<div class="accordion-icon">
+														<i
+															class="fa-solid fa-plus-large"
+														></i>
+													</div>
+												</button>
+											</h2>
+											<div
+												id="collapseThree"
+												class="accordion-collapse collapse"
+												aria-labelledby="headingThree"
+												data-bs-parent="#accordionExample"
+											>
+												<div class="accordion-body">
+													ما تحقیقات گسترده ای را برای
+													شناسایی بهترین کلمات کلیدی و
+													استراتژی ها برای بهبود رتبه
+													بندی موتورهای جستجو انجام می
+													دهیم. ما همچنین از بهترین
+													شیوه‌ها برای بهینه‌سازی روی
+													صفحه، از جمله برچسب‌های
+													عنوان، توضیحات متا و
+													بهینه‌سازی محتوا استفاده
+													می‌کنیم.
+												</div>
+											</div>
+										</div>
+										<div class="accordion-item loga-card">
+											<h2
+												class="accordion-header"
+												id="headingThree"
+											>
+												<button
+													class="accordion-button collapsed"
+													type="button"
+													data-bs-toggle="collapse"
+													data-bs-target="#collapseThree"
+													aria-expanded="false"
+													aria-controls="collapseThree"
+												>
+													<span
+														>فرآیند شما برای طراحی و
+														توسعه وب سایت
+														چیست؟</span
+													>
+
+													<div class="accordion-icon">
+														<i
+															class="fa-solid fa-plus-large"
+														></i>
+													</div>
+												</button>
+											</h2>
+											<div
+												id="collapseThree"
+												class="accordion-collapse collapse"
+												aria-labelledby="headingThree"
+												data-bs-parent="#accordionExample"
+											>
+												<div class="accordion-body">
+													<p>
+														فرآیند ما معمولاً شامل
+														یک فراخوان کشف برای بحث
+														در مورد نیازها و اهداف
+														مشتری و به دنبال آن
+														تحقیق و توسعه استراتژی
+														است. از آنجا، به مرحله
+														طراحی و توسعه می‌رویم،
+														جایی که قبل از نهایی
+														کردن وب‌سایت، قالب‌ها،
+														نمونه‌های اولیه و مفاهیم
+														طراحی را ایجاد می‌کنیم.
+														سپس قبل از راه اندازی وب
+														سایت، تضمین کیفیت و
+														آزمایش را انجام می دهیم.
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="faq-title">
+									<h6>FAQ</h6>
+									<h1>
+										Common
+										<br />
+										Questions
+									</h1>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<footer class="footer"></footer>
 			</div>
 		</div>
 	</body>
