almost final update

--- a/home-nima.html
+++ b/home-nima.html
@@ -28,17 +28,19 @@
 						id="navbarNavAltMarkup"
 					>
 						<div class="navbar-nav gap-2">
-							<a class="nav-link loga-btn" href="#">LET'S TALK</a>
+							<a class="nav-link loga-btn" href="#footer">تماس</a>
 							<a
 								class="nav-link active"
 								aria-current="page"
 								href="#"
-								>Home</a
+								>خانه</a
 							>
-							<a class="nav-link" href="#">BLOG</a>
-							<a class="nav-link" href="#">ABOUT</a>
-							<a class="nav-link" href="#">WORK</a>
-							<a class="nav-link" href="#">SERVICES</a>
+							<a class="nav-link" href="#services">خدمات</a>
+							<a class="nav-link" href="#portfolio"
+								>نمونه‌کارها</a
+							>
+							<a class="nav-link" href="#process">مراحل کار</a>
+							<a class="nav-link" href="#faq">سوالات متداول</a>
 						</div>
 					</div>
 					<a class="navbar-brand" href="#">LOGATO</a>
@@ -57,14 +59,14 @@
 									& Developer
 								</h1>
 								<p>
-									Premium Web Design, Development, and SEO
-									services to help your business stand out.
+									خدمات طراحی وب سایت، توسعه و سئو ممتاز برای
+									کمک به برجسته شدن کسب و کار شما.
 								</p>
 								<a
 									href="#"
 									class="loga-links slide-down loga-transition"
 								>
-									<span>MY SERVICES</span>
+									<span>خدمات ما</span>
 									<i
 										class="fa-light fa-arrow-down loga-transition"
 									></i>
@@ -74,21 +76,21 @@
 					</div>
 				</section>
 
-				<section class="services">
+				<section class="services" id="services">
 					<div class="container-fluid">
 						<div class="services-wrapper">
 							<div class="service-card loga-card">
 								<div class="service-content">
-									<span class="number">03</span>
+									<span class="number">01</span>
 									<div class="service-title">
 										<h2>Content & Seo</h2>
 									</div>
 									<div class="service-description">
 										<p>
-											Proven SEO strategies that enhance
-											your online performance, bringing
-											you to the forefront of organic
-											search results.
+											استراتژی های سئو اثبات شده که عملکرد
+											آنلاین شما را افزایش می دهد و شما را
+											در صف اول نتایج جستجوی ارگانیک قرار
+											می دهد.
 										</p>
 									</div>
 								</div>
@@ -112,10 +114,10 @@
 									</div>
 									<div class="service-description">
 										<p>
-											Get custom web development solutions
-											that are tailored to your
-											specifications, designed to deliver
-											a flawless user experience.
+											راه‌حل‌های توسعه وب سفارشی را دریافت
+											کنید که مطابق با مشخصات شما طراحی
+											شده است تا تجربه کاربری بی‌نقصی را
+											ارائه دهد.
 										</p>
 									</div>
 								</div>
@@ -139,9 +141,10 @@
 									</div>
 									<div class="service-description">
 										<p>
-											Visually stunning web designs that
-											captivate your audience by blending
-											your brand voice and customer needs.
+											طراحی های وب بصری خیره کننده ای که
+											با ترکیب صدای برند شما و نیازهای
+											مشتری، مخاطبان شما را مجذوب خود می
+											کند.
 										</p>
 									</div>
 								</div>
@@ -161,7 +164,7 @@
 					</div>
 				</section>
 
-				<section class="portfolio">
+				<section class="portfolio" id="portfolio">
 					<div class="container-fluid">
 						<div class="portfolio-wrapper">
 							<div class="portfolio-wrapper-header">
@@ -169,12 +172,12 @@
 									href="#"
 									class="loga-links loga-hyper-link-btn loga-transition"
 								>
-									<span>SEE ALL</span>
+									<span>مشاهده همه‌ی نمونه‌کارها</span>
 									<i
 										class="fa-light fa-arrow-right loga-transition"
 									></i>
 								</a>
-								<h1>Portfolio</h1>
+								<h1>نمونه‌کارها</h1>
 							</div>
 							<div class="portfolio-content-wrapper">
 								<div class="loga-card portfolio-card">
@@ -266,12 +269,12 @@
 					</div>
 				</section>
 
-				<section class="process">
+				<section class="process" id="process">
 					<div class="container-fluid">
 						<div class="process-wrapper">
 							<div class="process-header">
 								<div class="subtitle">
-									<p>THE PROCESS</p>
+									<p>مراحل کار</p>
 								</div>
 								<div class="title">
 									<h1>
@@ -282,8 +285,9 @@
 								</div>
 								<div class="description">
 									<p>
-										Our process ensures that we create a
-										website tailored to your business needs.
+										فرآیند ما تضمین می کند که ما یک وب سایت
+										متناسب با نیازهای کسب و کار شما ایجاد می
+										کنیم.
 									</p>
 								</div>
 							</div>
@@ -303,33 +307,29 @@
 										<div class="timeline-panel loga-card">
 											<div class="wrapper">
 												<div class="subtitle">
-													Do we Match?
+													آیا ما مطابقت داریم؟
 												</div>
 												<div class="title">
-													Discovery Call
+													تماس برای مشاوره
 												</div>
 												<p>
-													Before we start, we
-													determine if and how I can
-													help you. What are your
-													requirements for your new
-													website? Why do you need a
-													new website? What goals do
-													you have, and what problems
-													can we solve with a new
-													website?
+													قبل از شروع، تعیین می کنیم
+													که آیا و چگونه می توانم به
+													شما کمک کنم. الزامات شما
+													برای وب سایت جدید چیست؟ چرا
+													به یک وب سایت جدید نیاز
+													دارید؟ چه اهدافی دارید و چه
+													مشکلاتی را می توانیم با یک
+													وب سایت جدید حل کنیم؟
+												</p>
+												<p>با هم بهتر آشنا می شویم</p>
+												<p>
+													تعیین کنید که چگونه می توانم
+													به بهترین نحو به شما کمک کنم
 												</p>
 												<p>
-													We get to know each other
-													better
-												</p>
-												<p>
-													Determine how I can best
-													assist you
-												</p>
-												<p>
-													Understand the goals you
-													have for your website
+													اهدافی که برای وب سایت خود
+													دارید را درک کنید
 												</p>
 											</div>
 										</div>
@@ -340,16 +340,28 @@
 											<span>02</span>
 										</div>
 										<div class="timeline-panel loga-card">
-											<p>
-												Lorem ipsum dolor sit amet,
-												consectetur adipisicing elit.
-												Porro odio, velit doloribus
-												cupiditate, illo, voluptatum aut
-												itaque optio eligendi sit, at
-												distinctio cumque doloremque
-												harum fugiat. At, blanditiis,
-												aperiam! Dolorem.
-											</p>
+											<div class="wrapper">
+												<div class="subtitle">
+													ما به یک برنامه نیاز داریم
+												</div>
+												<div class="title">
+													مفهوم و استراتژی
+												</div>
+												<p>
+													با هم، ما یک استراتژی ایجاد
+													می کنیم که با موفقیت اهداف
+													شما را با نیازهای مخاطبان
+													هدف شما ترکیب می کند. بر
+													اساس این مفهوم، من اولین
+													وایرفریم ها و یک نمونه اولیه
+													تعاملی را ایجاد می کنم. این
+													تصور بسیار خوبی از وب سایت و
+													رابط کاربری به ما می دهد.
+												</p>
+												<p>طراحی UX</p>
+												<p>وایرفریم ها</p>
+												<p>نمونه اولیه تعاملی</p>
+											</div>
 										</div>
 									</li>
 									<li class="timeline-inverted">
@@ -359,34 +371,29 @@
 										<div class="timeline-panel loga-card">
 											<div class="wrapper">
 												<div class="subtitle">
-													Do we Match?
+													مقداری سحر و جادو
 												</div>
 												<div class="title">
-													Discovery Call
+													طراحی وب
 												</div>
 												<p>
-													Before we start, we
-													determine if and how I can
-													help you. What are your
-													requirements for your new
-													website? Why do you need a
-													new website? What goals do
-													you have, and what problems
-													can we solve with a new
-													website?
+													حالا جادو می آید. بر اساس
+													مفهومی که قبلاً توسعه داده
+													شده بود، من یک طراحی صفحه
+													نمایش سطح بالا کاملاً متناسب
+													با نام تجاری شما ایجاد می
+													کنم. طراحی وب سایتی که شما
+													را از رقبایتان متمایز می
+													کند، به طور ایده آل برای
+													مخاطبان هدف شما مناسب است و
+													تجربه کاربری عالی را ارائه
+													می دهد.
 												</p>
 												<p>
-													We get to know each other
-													better
+													طراحی وب رده بالا متناسب با
+													برند شما
 												</p>
-												<p>
-													Determine how I can best
-													assist you
-												</p>
-												<p>
-													Understand the goals you
-													have for your website
-												</p>
+												<p>نمونه اولیه تعاملی طراحی</p>
 											</div>
 										</div>
 									</li>
@@ -396,16 +403,29 @@
 											<span>04</span>
 										</div>
 										<div class="timeline-panel loga-card">
-											<p>
-												Lorem ipsum dolor sit amet,
-												consectetur adipisicing elit.
-												Porro odio, velit doloribus
-												cupiditate, illo, voluptatum aut
-												itaque optio eligendi sit, at
-												distinctio cumque doloremque
-												harum fugiat. At, blanditiis,
-												aperiam! Dolorem.
-											</p>
+											<div class="wrapper">
+												<div class="subtitle">
+													جادوی بیشتر
+												</div>
+												<div class="title">توسعه</div>
+												<p>
+													در این مرحله، ما به طراحی
+													جدید و پیشرفته شما جان می
+													دهیم. شما یک وب سایت سفارشی
+													با استفاده از سیستم طراحی وب
+													مدولار و یکپارچه سازی CMS
+													دریافت خواهید کرد. انیمیشن
+													ها استعداد لازم را به سایت
+													شما می بخشند و شما را از
+													رقابت خسته کننده جدا می
+													کنند.
+												</p>
+												<p>وب سایت فریمر سفارشی</p>
+												<p>
+													سیستم های طراحی وب ماژولار
+												</p>
+												<p>یکپارچه سازی CMS</p>
+											</div>
 										</div>
 									</li>
 									<li class="timeline-inverted">
@@ -415,33 +435,34 @@
 										<div class="timeline-panel loga-card">
 											<div class="wrapper">
 												<div class="subtitle">
-													Do we Match?
+													آماده رفتن
 												</div>
 												<div class="title">
-													Discovery Call
+													ورود به وب سایت
 												</div>
 												<p>
-													Before we start, we
-													determine if and how I can
-													help you. What are your
-													requirements for your new
-													website? Why do you need a
-													new website? What goals do
-													you have, and what problems
-													can we solve with a new
-													website?
+													در یک کارگاه شخصی Framer، به
+													شما نشان خواهم داد که چگونه
+													به سرعت و به راحتی تغییراتی
+													را در وب سایت جدید خود ایجاد
+													کنید. علاوه بر این، آموزش
+													های ویدیویی Framer شخصی سازی
+													شده را دریافت خواهید کرد که
+													در هر زمان می توانید به آنها
+													دسترسی داشته باشید. وب سایت
+													Framer خود را بدون نیاز به
+													برنامه نویس اضافی یا باطن
+													پیچیده ویرایش کنید. به همین
+													سادگی است.
+												</p>
+												<p>کارگاه شخصی</p>
+												<p>
+													آموزش های ویدیویی شخصی سازی
+													شده
 												</p>
 												<p>
-													We get to know each other
-													better
-												</p>
-												<p>
-													Determine how I can best
-													assist you
-												</p>
-												<p>
-													Understand the goals you
-													have for your website
+													متن و تصاویر را مستقیماً در
+													وب سایت خود ویرایش کنید
 												</p>
 											</div>
 										</div>
@@ -452,7 +473,7 @@
 					</div>
 				</section>
 
-				<section class="faq">
+				<section class="faq" id="faq">
 					<div class="container">
 						<div class="container-fluid">
 							<div class="faq-wrapper">
@@ -591,31 +612,34 @@
 												data-bs-parent="#accordionExample"
 											>
 												<div class="accordion-body">
-													ما تحقیقات گسترده ای را برای
-													شناسایی بهترین کلمات کلیدی و
-													استراتژی ها برای بهبود رتبه
-													بندی موتورهای جستجو انجام می
-													دهیم. ما همچنین از بهترین
-													شیوه‌ها برای بهینه‌سازی روی
-													صفحه، از جمله برچسب‌های
-													عنوان، توضیحات متا و
-													بهینه‌سازی محتوا استفاده
-													می‌کنیم.
+													<p>
+														ما تحقیقات گسترده ای را
+														برای شناسایی بهترین
+														کلمات کلیدی و استراتژی
+														ها برای بهبود رتبه بندی
+														موتورهای جستجو انجام می
+														دهیم. ما همچنین از
+														بهترین شیوه‌ها برای
+														بهینه‌سازی روی صفحه، از
+														جمله برچسب‌های عنوان،
+														توضیحات متا و بهینه‌سازی
+														محتوا استفاده می‌کنیم.
+													</p>
 												</div>
 											</div>
 										</div>
 										<div class="accordion-item loga-card">
 											<h2
 												class="accordion-header"
-												id="headingThree"
+												id="headingFour"
 											>
 												<button
 													class="accordion-button collapsed"
 													type="button"
 													data-bs-toggle="collapse"
-													data-bs-target="#collapseThree"
+													data-bs-target="#collapseFour"
 													aria-expanded="false"
-													aria-controls="collapseThree"
+													aria-controls="collapseFour"
 												>
 													<span
 														>فرآیند شما برای طراحی و
@@ -631,9 +655,9 @@
 												</button>
 											</h2>
 											<div
-												id="collapseThree"
+												id="collapseFour"
 												class="accordion-collapse collapse"
-												aria-labelledby="headingThree"
+												aria-labelledby="headingFour"
 												data-bs-parent="#accordionExample"
 											>
 												<div class="accordion-body">
@@ -659,19 +683,105 @@
 									</div>
 								</div>
 								<div class="faq-title">
-									<h6>FAQ</h6>
-									<h1>
-										Common
-										<br />
-										Questions
-									</h1>
+									<h3>سوالات متداول</h3>
+									<p>
+										<strong>Logato</strong> یک شرکت حرفه‌ای
+										در زمینه طراحی سایت است که خدماتی از
+										جمله طراحی سایت‌های مدرن، ریسپانسیو و
+										کاربرپسند ارائه می‌دهد. تیم ما با تجربه
+										در طراحی و توسعه وب‌سایت‌های شخصی، تجاری
+										و فروشگاهی، تمامی نیازهای مشتریان را
+										برآورده می‌کند. ما به زمان‌بندی دقیق
+										تحویل پروژه و ارائه قیمت‌های شفاف پایبند
+										هستیم. همچنین پس از اتمام پروژه، خدمات
+										پشتیبانی و به‌روزرسانی به صورت مستمر
+										ارائه می‌شود تا وب‌سایت شما همواره به
+										بهترین شکل ممکن عمل کند. Logato همراه
+										شما در تمام مراحل طراحی و نگهداری
+										وب‌سایت است.
+									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
 
-				<footer class="footer"></footer>
+				<footer class="footer" id="footer">
+					<div class="footer-wrapper">
+						<div class="footer-logo-social">
+							<div class="footer-logo">
+								<a href="#">
+									<p>LOGATO</p>
+								</a>
+							</div>
+							<div class="footer-social">
+								<a href="#">
+									<i class="fa-brands fa-whatsapp"></i>
+								</a>
+								<a href="#">
+									<i class="fa-brands fa-telegram"></i>
+								</a>
+							</div>
+						</div>
+						<div class="footer-links">
+							<div class="footer-title">
+								<h3>لینک‌های مفید</h3>
+							</div>
+							<div class="footer-link-items">
+								<ul class="footer-link-list">
+									<li>
+										<a href="#">
+											<p>نمونه کارها</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<p>نمونه کارها</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<p>نمونه کارها</p>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer-contact-us">
+							<div class="footer-title">
+								<h3>تماس با ما</h3>
+							</div>
+							<div class="footer-link-items">
+								<ul class="footer-link-list">
+									<li>
+										<a href="#">
+											<p>09122613278</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<p>09305572838</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<p>
+												تهران، خیابان نلسون ماندلا، پلاک
+												۶۳
+											</p>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="logato-copyright">
+						<p>
+							کلیه حقوق مادی و معنوی این سایت متعلق به شرکت لوگاتو
+							می باشد.
+						</p>
+					</div>
+				</footer>
 			</div>
 		</div>
 	</body>
